# delfi

./: CMakeLists.txt  make.sh  todolist.md
example/: integral1.cpp  integral2.cpp  integral3.cpp  integral4.cpp
include/delfi/: Compound.h  Field.cpp  Field.h  Function.h  Matrix.h  MultiFunction.h  VecValFunction.h  Vector.h  constants.h  reporter.h
src/: Compound.cpp  Field.cpp  Function.cpp  Matrix.cpp  MultiFunction.cpp  VecValFunction.cpp  Vector.cpp
test/: test_function.cpp  test_matrix.cpp
test/unit/: test_field.cpp  test_function.cpp  test_matrix.cpp  test_multifunction.cpp  test_vec_val_function.cpp  test_vector.cpp
